# Hello-World

./: README.md  setup.cfg
src/Helloworld2023.egg-info/: PKG-INFO  SOURCES.txt
src/mypackage/: main.py
