[metadata]
name = Helloworld2023
version = 0.0.5
author =i18nsolutionspy
author_email = i18nsolutionspy@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BhuvaneshwaraRagavendra/Hello-World
project_urls =
    Bug Tracker = https://github.com/BhuvaneshwaraRagavendra/Hello-World/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[tool.poetry.authors]
"Author 1" = "Bhuvaneshwararagavendra@gmail.com"
"Author 2" = "rosekevin30@gmail.com"
"Author 3" = "archanakt.cse@gmail.com"

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src